--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/stylesheet.scss">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <title>Collegiate</title>
 </head>
 <body>
-    <h4>Collegiate</h4>
+    <main>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Contacts</a></li>
+                </ul>
+                <a href=""><img src="assets/logo.svg" alt=""></a>
+                <div>
+                    <button style="color: #1EBB9C; background-color: #E0FFF8;">Login</button>
+                    <button style="background-color: #1EBB9C; color: white;">Sign up</button>
+                </div>
+            </nav>
+            <section>
+                <aside id="left">
+                    <h1>Ma’am I was <span>Present</span>.</h1>
+                    <p>Its so important to understand your good attendance ups your chances of graduating.</p>
+                    <button style="width: fit-content; background-color: #1EBB9C; color: white; padding: 1.2rem 3.2rem; font-size: 1.6rem;">Get Started</button>
+                </aside>
+                <aside id="right"></aside>
+            </section>
+        </header>
+    </main>
     <script src="script/script.js"></script>
 </body>
 </html>
