--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
                 <a href=""><img src="assets/logo.svg" alt=""></a>
                 <div>
-                    <button style="color: #1EBB9C; background-color: #E0FFF8;">Login</button>
+                    <button id="logbtn" style="color: #1EBB9C; background-color: #E0FFF8;">Login</button>
                     <button id="signbtn" style="background-color: #1EBB9C; color: white;">Sign up</button>
                 </div>
             </nav>
@@ -43,6 +43,17 @@
             <input type="password" placeholder="Darpan@1977.">
             <p style="margin-bottom: 1.8rem; margin-right: 2rem; font-weight: normal; font-size: 1.4rem;display: flex;align-items: center;"><input type="checkbox"><span>I agree terms and condition</span></p>
             <input type="submit" value="Register" style="border: none; background: #F23E64; color: white; ">
+        </form>
+    </section>
+    <section class="login" id="login">
+        <form id="form2" class="animate__animated">
+            <h3>Login with<br>Collegiate.</h3>
+            <p id="email">Email Address</p>
+            <input type="email"  placeholder="debra.holt@example.com">
+            <p id="password">Password</p>
+            <input type="password" placeholder="Darpan@1977.">
+            <p style="margin-bottom: 1.8rem; margin-right: 2rem; font-weight: normal; font-size: 1.4rem;display: flex;align-items: center;"><input type="checkbox"><span>I agree terms and condition</span></p>
+            <input type="submit" value="login" style="border: none; background: #F23E64; color: white; ">
         </form>
     </section>
     <script src="script/script.js"></script>
