signup login using indexedDB and sessionStorage

--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
     <section class="signup" id="signup">
         <form id="form" class="animate__animated">
             <h3>Get started with<br>Collegiate.</h3>
-            <p id="email">Email Address</p>
-            <input type="email"  placeholder="debra.holt@example.com">
-            <p id="password">Password</p>
-            <input type="password" placeholder="Darpan@1977.">
+            <p id="email" >Email Address</p>
+            <input type="email" required="required" id="sign_email" placeholder="debra.holt@example.com">
+            <p id="password" >Password</p>
+            <input type="password" id="sign_password" required="required" placeholder="Darpan@1977.">
             <p style="margin-bottom: 1.8rem; margin-right: 2rem; font-weight: normal; font-size: 1.4rem;display: flex;align-items: center;"><input type="checkbox"><span>I agree terms and condition</span></p>
-            <input type="submit" value="Register" style="border: none; background: #F23E64; color: white; ">
+            <input type="submit" id="register" value="Register" style="border: none; background: #F23E64; color: white; ">
         </form>
     </section>
     <section class="login" id="login">
         <form id="form2" class="animate__animated">
             <h3>Login with<br>Collegiate.</h3>
             <p id="email">Email Address</p>
-            <input type="email"  placeholder="debra.holt@example.com">
+            <input type="email" required="required" id="login_email" placeholder="debra.holt@example.com">
             <p id="password">Password</p>
-            <input type="password" placeholder="Darpan@1977.">
+            <input type="password" required="required" id="login_password" placeholder="Darpan@1977.">
             <p style="margin-bottom: 1.8rem; margin-right: 2rem; font-weight: normal; font-size: 1.4rem;display: flex;align-items: center;"><input type="checkbox"><span>I agree terms and condition</span></p>
             <input type="submit" value="login" style="border: none; background: #F23E64; color: white; ">
         </form>
